--- a/static/CSS/threads.css
+++ b/static/CSS/threads.css
@@ -1,26 +1,46 @@
 
-/* * > {
-    need to match icons first
-    color: rgb(208, 208, 208);
-} */
+
+.thread-post-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    /* overflow-y: scroll;
+    overflow-x: hidden; */
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    border: 1px solid rgb(139, 138, 138);
+
+    background-color: rgb(84, 82, 81);
+}
+
 
 .thread-content {
     display: flex;
     flex-direction: column;
-    height: 95px;
+    height: 100%;
     width: 100%;
-    padding-top: 3px;
+   
+
     
+}
+
+.thread-content-text {
+    display: flex;
+    height: 100%;
+    width: 100%;
+
 }
 
 .thread_likes-dislikes {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+ 
     width: 40px;
     height: 100%;
     margin-left: 5px;
+    margin-top: -5px;
 }
 
 .thread_totallikes-wrap {
