--- a/static/CSS/topnav.css
+++ b/static/CSS/topnav.css
@@ -11,6 +11,7 @@
     width: 100%;
     height: 50px;
     align-items: flex-end;
+    justify-content: space-between;
     background-color: rgb(84, 82, 81);
 
     border-bottom: solid 5px rgb(65, 30, 30);
@@ -120,21 +121,19 @@
 #nav-profile-wrapper {
     display: flex;
     flex-direction: column;
-    margin-top: 50px;
     height: 100%;
-    width: 17%;
-    margin-left: 10px;
+    width: 20%;
     z-index: 10;
+    align-items: flex-end;
+    margin-right: 30px;
+    justify-content: center;
     
-    border: 1px solid rgb(255, 255, 255);
-    background-color: rgb(84, 82, 81);
 
 }
 
 .nav-profile-button-wrap {
     display: flex;
     flex-direction: column;
-
     border-radius: 4px;
     width: 100%;
     height: 100%;
@@ -183,6 +182,7 @@
     height: fit-content;
     width: 100%;
     background-color: rgb(84, 82, 81);
+    position: absolute;
 
 
 }
