--- a/static/CSS/create.css
+++ b/static/CSS/create.css
@@ -307,13 +307,24 @@ p {
     display: none;
   }
 
+
+.community-rules-wrap {
+      visibility: visible;
+      opacity: 1;
+      width: 100%;
+      height: 100%;
+}
+
 .sidebar-rules {
     display: flex;
     flex-direction: column;
     border: 1px solid rgb(186, 184, 184);
     background-color: rgb(84, 82, 81);
     width: 25vw;
+    visibility: visible;
+    opacity: 1;
 }
+
 
 .sidebar-header {
     display: flex;
