--- a/static/CSS/topnav.css
+++ b/static/CSS/topnav.css
@@ -64,11 +64,30 @@
     width: 30px;
 }
 
+.search-button-wrap {
+    width: 10%;
+    height: 100%;
+}
+
+.search-dropdown-wrap {
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+    height: 100%;
+    position: absolute;
+    background-color: rgb(136, 133, 131);
+    border: 1px solid rgba(186, 184, 184, 0.757);
+    border-radius: 4px;
+
+}
+
 .search-wrap {
     display: flex;
+  
     height: 32px;
-    width: 215px;
+    width: 20vw;
 }
+
 
 #maglens {
     height: 30px;
@@ -79,17 +98,17 @@
 }
 
 #search {
-    background-color: rgb(136, 133, 131);
-    border: 1px solid rgba(186, 184, 184, 0.757);
-    border-radius: 4px;
-    padding: 0 35px;
+    background-color: rgba(136, 133, 131, 0);
+    border: none;
+    padding-left: 35px;
     height: 32px;
-    width: 100%;
+    width: 99%;
     max-width: 300px;
 }
 
+
 #search:hover {
-    border: 1px solid rgb(219, 216, 216);
+    border: none;
 
 }
 
