--- a/templates/base.html
+++ b/templates/base.html
@@ -56,13 +56,13 @@
         {% endif %}
 
         <div class="search-div-wrap">
-            <div class="search-button-wrap">
+            <div class="search-button-wrap" id='search-button'>
                 <div class="search-wrap">
                     <img src="{% static "images/SearchMag.png" %}" alt="" srcset="" id="maglens">
                     <input type="search" name="" id="search" placeholder='Search'>
                 </div>
             </div>
-            <div class="search-dropdown-wrap">
+            <div class="hidden-nav" id='search-dropdownz'>
 
                 <div class="nav-dropdown-wrap" id='nav-group-dropdown'>
 
